<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="DefaultMotionBuilder" Id="{a2edf869-84c6-0db6-0085-e9eeeeb63c74}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'linkalways'} 
{attribute 'no_explicit_call' := 'This FB is a CLASS and must be accessed using methods or properties'}
{attribute 'enable_dynamic_creation'}
FUNCTION_BLOCK PUBLIC DefaultMotionBuilder IMPLEMENTS MotionBuilder
VAR
	_parameters : DefaultMotionBuilderParameters;
	move_builder : DefaultMoveBuilder(parent_builder := THIS);
	velocity_move_builder : DefaultVelocityMoveBuilder(parent_builder := THIS);
	absolute_move_builder : DefaultAbsoluteMoveBuilder(parent_builder := THIS);
	relative_move_builder : DefaultRelativeMoveBuilder(parent_builder := THIS);
	gear_in_builder : DefaultGearInBuilder(parent_builder := THIS);
END_VAR
VAR CONSTANT
	default_parameters : DefaultMotionBuilderParameters := (
		position := 0,
		distance := 0,
		velocity := 0,
		acceleration := 0,
		deceleration := 0,
		jerk := 0,
		buffer_mode := MotionBufferMode.Aborting,
		ratio_numerator := 1,
		ratio_denominator := 1
	);
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="Builders" Id="{71879d48-47e6-0cab-387a-5d67b61154a0}" />
    <Folder Name="PropertySetters" Id="{ad35ec2c-16b4-0b94-3cac-7af0eeffa3a2}" />
    <Property Name="AbsoluteMoveBuilder" Id="{31a6529e-f2de-449d-8130-a3c198ef667d}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL AbsoluteMoveBuilder : AbsoluteMoveBuilder]]></Declaration>
      <Get Name="Get" Id="{b4d19fb7-2caf-4731-88e4-63dbec729e54}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[AbsoluteMoveBuilder := absolute_move_builder;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Acceleration" Id="{e3e77b4e-beaf-08fb-2cc2-0b24bea83d64}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Acceleration : MoveBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.acceleration := value;
Acceleration := move_builder;]]></ST>
      </Implementation>
    </Method>
    <Method Name="BufferMode" Id="{06ea8e4a-9a6b-04d6-268a-1a80b8fb3ff5}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC BufferMode : MoveBuilder
VAR_INPUT
	mode : MotionBufferMode;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.buffer_mode := mode;
BufferMode := move_builder;]]></ST>
      </Implementation>
    </Method>
    <Method Name="BuildGearOutCommand" Id="{26b3a5cc-7687-4035-8ab6-99494cf1263a}" FolderPath="Builders\">
      <Declaration><![CDATA[METHOD PUBLIC BuildGearOutCommand : AsyncCommand
VAR_INPUT
	axis : Axis;
END_VAR
VAR
	command_ptr : POINTER TO GearOutCommand;
	command : AsyncCommand;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[command_ptr := __NEW(GearOutCommand(
	axis := axis
));
BuildGearOutCommand := command_ptr^;]]></ST>
      </Implementation>
    </Method>
    <Method Name="BuildHaltCommand" Id="{7b53665c-7b19-43e0-b1df-ec08ab259a79}" FolderPath="Builders\">
      <Declaration><![CDATA[METHOD PUBLIC BuildHaltCommand : MotionCommand
VAR_INPUT
	axis : Axis;
END_VAR
VAR
	command_ptr : POINTER TO HaltCommand;
	command : MotionCommand;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[command_ptr := __NEW(HaltCommand(
	axis := axis,
	deceleration := _parameters.deceleration,
	jerk := _parameters.jerk,
	buffer_mode := _parameters.buffer_mode
));
BuildHaltCommand := command_ptr^;]]></ST>
      </Implementation>
    </Method>
    <Method Name="BuildStopCommand" Id="{7e9a74f9-4d3a-430e-a63e-10bb94b62f70}" FolderPath="Builders\">
      <Declaration><![CDATA[METHOD PUBLIC BuildStopCommand : MotionCommand
VAR_INPUT
	axis : Axis;
END_VAR
VAR
	command_ptr : POINTER TO StopCommand;
	command : MotionCommand;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[command_ptr := __NEW(StopCommand(
	axis := axis,
	deceleration := _parameters.deceleration,
	jerk := _parameters.jerk
));
BuildStopCommand := command_ptr^;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Deceleration" Id="{a0d39c27-e434-07f5-15fa-bdfcb8b9862f}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Deceleration : MotionBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.deceleration := value;
Deceleration := THIS^;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Denominator" Id="{71d0dac4-7e25-4e26-b773-671a618249c6}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Denominator : GearInBuilder
VAR_INPUT
	value : UINT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.ratio_denominator := value;
Denominator := gear_in_builder;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Distance" Id="{a4c80f52-31d0-0c12-1ba3-af4dbc20b8b1}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Distance : RelativeMoveBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.distance := value;
Distance := relative_move_builder;]]></ST>
      </Implementation>
    </Method>
    <Property Name="GearInBuilder" Id="{0162a7d8-c5e8-44fc-b3e7-7001c6a1fee9}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL GearInBuilder : GearInBuilder]]></Declaration>
      <Get Name="Get" Id="{a46e34af-8ccc-4a32-a70e-784a303530b9}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[GearInBuilder := gear_in_builder;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Jerk" Id="{dd5b428f-4ff4-025d-0b10-09c472252f90}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Jerk : MotionBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.jerk := value;
Jerk := THIS^;]]></ST>
      </Implementation>
    </Method>
    <Property Name="MoveBuilder" Id="{07041714-ead3-49bf-9492-2833957e923b}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL MoveBuilder : MoveBuilder]]></Declaration>
      <Get Name="Get" Id="{3546cf34-5e92-4afc-8699-c82dd3a4adf1}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[MoveBuilder := move_builder;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Numerator" Id="{59819601-f71a-4ef4-afd6-a659e26838c4}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Numerator : GearInBuilder
VAR_INPUT
	value : LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.ratio_numerator := value;
Numerator := gear_in_builder;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Parameters" Id="{304fdf3b-310b-46b8-9c01-fed58181e04e}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL Parameters : REFERENCE TO DefaultMotionBuilderParameters]]></Declaration>
      <Get Name="Get" Id="{cf78791c-cbf2-4cad-bcd6-2e88e6943e00}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[Parameters REF= _parameters;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Position" Id="{fe2fd08e-0eb0-0a47-0285-dd28cacda8d3}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Position : AbsoluteMoveBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.position := value;
Position := absolute_move_builder;]]></ST>
      </Implementation>
    </Method>
    <Property Name="RelativeMoveBuilder" Id="{443748e3-1acf-410a-b1e8-a9efcad0aa6d}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL RelativeMoveBuilder : RelativeMoveBuilder]]></Declaration>
      <Get Name="Get" Id="{607c774c-1e71-4e4f-b16d-2587b52ea208}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[RelativeMoveBuilder := relative_move_builder;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Reset" Id="{22b5d9a1-b16c-02f7-3dfe-7e6088649161}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Reset : MotionBuilder]]></Declaration>
      <Implementation>
        <ST><![CDATA[parameters := default_parameters;
Reset := THIS^;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Velocity" Id="{3548811d-ee50-01f2-3562-7d2324338261}" FolderPath="PropertySetters\">
      <Declaration><![CDATA[METHOD PUBLIC Velocity : VelocityMoveBuilder
VAR_INPUT
	value : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_parameters.velocity := value;
Velocity := velocity_move_builder;]]></ST>
      </Implementation>
    </Method>
    <Property Name="VelocityMoveBuilder" Id="{35e2c46a-7243-4f77-bd14-44e3c0126053}" FolderPath="Builders\">
      <Declaration><![CDATA[PROPERTY INTERNAL VelocityMoveBuilder : VelocityMoveBuilder]]></Declaration>
      <Get Name="Get" Id="{840b023c-381b-429f-8e16-9af7b4f89655}">
        <Declaration><![CDATA[INTERNAL]]></Declaration>
        <Implementation>
          <ST><![CDATA[VelocityMoveBuilder := velocity_move_builder;]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>